finished uptoproduct section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Jhakanaka-shop</title>
   </head>
   <body>
+    <!-- header section starts here -->
     <header class="header">
       <nav class="header-section">
         <div class="nav-container">
@@ -19,13 +20,114 @@
           <a href="">Products</a>
           <a href="">Gallery</a>
           <a href="">Discount</a>
-         <div class="login-button">
+          <div class="login-button">
             <a href="">Login</a>
-         </div>
+          </div>
         </div>
       </nav>
     </header>
-    <main></main>
+    <!-- header section ends here -->
+
+    <!-- banner section starts here -->
+    <main>
+      <section class="banner">
+        <div class="text-container">
+          <h1 class="men-bags">Men Bags</h1>
+          <p class="new-mens-collection">New Mens Collection</p>
+          <div class="social-icons">
+            <span"><img src="IMAGES/icons8-facebook-48.png" alt="" /></span>
+            <span><img src="IMAGES/icons8-instagram-48.png" alt="" /></span>
+            <span><img src="IMAGES/icons8-twitter-48.png" alt="" /></span>
+            <span><img src="IMAGES/icons8-linkedin-48.png" alt="" /></span>
+          </div>
+          <div class="button">
+            <button>See More</button>
+            <button>Shop Now</button>
+          </div>
+        </div>
+        <div class="banner-image-container">
+          <img src="IMAGES/bag-picture.jpg" alt="" />
+          <div class="Discount">30%</div>
+        </div>
+      </section>
+
+      <!-- banner section ends here -->
+      <!--product section start here -->
+      <section class="product-section">
+        <h1 style="text-align: center;font-size: 30px;">Products</h1>
+
+        <div class="grid-container">
+          <div class="single-product">
+            <img src="IMAGES/bag.png" alt="" />
+            <div class="heading-icon">
+              <h2>Product-1</h2>
+              <div class="icons">
+                <span><img src="IMAGES/shopping-cart.png" alt=""></span>
+                <span> <img src="IMAGES/credit-card.png" alt=""></span>
+                <span><img src="IMAGES/eye.png" alt=""></span>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
+              quo!
+            </p>
+            <p> Price: $1200</p>
+            <button
+              style="background-color: white; color: black; padding: 10px 15px;"
+            >
+              BUY
+            </button>
+          </div>
+          <div class="single-product">
+            <img src="IMAGES/bag.png" alt="" />
+            <div class="heading-icon">
+              <h2>Product-1</h2>
+              <div class="icons">
+                <span><img src="IMAGES/shopping-cart.png" alt=""></span>
+                <span> <img src="IMAGES/credit-card.png" alt=""></span>
+                <span><img src="IMAGES/eye.png" alt=""></span>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
+              quo!
+            </p>
+            <p> Price: $1200</p>
+            <button
+              style="background-color:white; color: black; padding: 10px 15px"
+            >
+              BUY
+            </button>
+          </div>
+          <div class="single-product">
+            <img src="IMAGES/bag.png" alt="" />
+            <div class="heading-icon">
+              <h2>Product-1</h2>
+              <div class="icons">
+                <span><img src="IMAGES/shopping-cart.png" alt=""></span>
+                <span> <img src="IMAGES/credit-card.png" alt=""></span>
+                <span><img src="IMAGES/eye.png" alt=""></span>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
+              quo!
+            </p>
+            <p> Price: $1200</p>
+            <button
+            style="background-color: white; color: black; padding: 10px 15px"
+          >
+            BUY
+          </button>
+             
+          </div>
+         
+        </div>
+      </section>
+
+      <!--product section ends here -->
+    </main>
+
     <footer></footer>
   </body>
 </html>
