--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </main>
 
     <footer>
-      
+      <p><img src="IMAGES/shopping-cart.png" alt="">Copyright @ 2024, all right reserved</p>
     </footer>
   </body>
 </html>
